@@ -883,4 +883,11 @@ public class HtmlParserTest {
         Elements main = doc.select("div[class='main']");
         assertEquals("hello", main.text());
     }
+
+    @Test public void testSupportsNonAsciiTags() {
+        String body = "<進捗推移グラフ>Yes</進捗推移グラフ>";
+        Document doc = Jsoup.parse(body);
+        Elements els = doc.select("進捗推移グラフ");
+        assertEquals("Yes", els.text());
+    }
 }
